  -  Example script allows remembered source and preselected language to be cleared (Milian Wolff)
  -  Example script now properly includes geshi and doesn't suppress error messages anylonger. (Milian Wolff)
  -  Code cleanup by using direct string indexing instead of substr with length 1 (Milian Wolff)
  -  Optimized generation of code parts in strict mode (Milian Wolff)
  -  Fixed a problem the could rarely skipped highlighting of escaped chars that usually should be highlighted (BenBE)
  -  First of series of color scheme changes. Affected languages (sofar):
     * Assembler (x86)
     * Bash
     * C
     * C#
     * Delphi
     * Fortran77
     * glSlang
     * Java & Java 5
     * JavaScript
     * OCaml
     * OpenOffice.org Basic
     * Pascal
     * Perl
     * PHP and PHP-Brief
Version 1.0.7.21
  -  Added language files
     * Basic4GL (Matthew Webb)
  -  Fixed problem with mIRC language highlighting spaces only (BenBE)
  -  Language files can now specify a function to be called to decide the
     colour of a regular expression match
  -  Added single quote to Lua (Darrin Roenfanz)
  -  Compare comments case insensitively (fixes AutoIT comments somewhat)
     (Daniel Gordon)
  -  Fixed symbols not being highlighted at all (SF #1767953, BenBE)
  -  Fixed brackets not correctly managed (SF #1767954, BenBE)
  -  Changed default languages for some extensions
  -  Included color and character information for symbol highlighting in some languages (BenBE)
  -  Fixed a problem with extension detection if default was used (BenBE)
  -  Fixed a highlighting problem with the LaTeX language (SF #1776182, BenBE)
  -  Added a new parameter for enable_highlighting to reduce source duplication (SF #1786104, BenBE)
  -  Updated doxygen documentation to include since tags and some missing parameters
  -  Disabled symbol highlighting by default (doesn't affect brackets, cf. documentation) (BenBE)