@@ -50,6 +50,7 @@ Version 1.0.7.22
   -  Example script now properly includes geshi and doesn't suppress error messages anylonger. (Milian Wolff)
   -  Code cleanup by using direct string indexing instead of substr with length 1 (Milian Wolff)
   -  Optimized generation of code parts in strict mode (Milian Wolff)
+  -  Optimized COMMENT_REGEXP by using an incremental regexp cache (Milian Wolff, BenBE)
   -  Fixed a problem the could rarely skipped highlighting of escaped chars that usually should be highlighted (BenBE)
   -  First of series of color scheme changes. Affected languages (sofar):
      * Assembler (x86)
